--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "next preview"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "marked": "^16.1.1",
     "next": "^15.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
